--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "google-auth-library": "^7.1.1",
     "googleapis": "^76.0.0",
     "mongoose": "^5.12.13",
+    "ts-node": "^9.1.1",
     "youtube-metadata-from-url": "^1.0.3"
   }
 }
