--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^76.0.0",
     "mongoose": "^5.12.13",
     "ts-node": "^9.1.1",
-    "youtube-metadata-from-url": "^1.0.3"
+    "youtube-metadata-from-url": "^1.0.3",
+    "typescript": "^4.3.2"
   }
 }
