--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^5.12.13",
     "ts-node": "^9.1.1",
     "youtube-metadata-from-url": "^1.0.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@types/express": "^4.17.12",
+    "@types/gapi": "^0.0.39"
   }
 }
