--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.12",
+    "@types/gapi": "^0.0.39",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "gapi": "^0.0.3",
     "google-auth-library": "^7.1.1",
     "googleapis": "^76.0.0",
     "mongoose": "^5.12.13",
     "ts-node": "^9.1.1",
-    "youtube-metadata-from-url": "^1.0.3",
     "typescript": "^4.3.2",
-    "@types/express": "^4.17.12",
-    "@types/gapi": "^0.0.39"
+    "youtube-metadata-from-url": "^1.0.3"
   }
 }
